--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "anki-apkg-export",
   "description": "Generate decks for Anki (spaced repetition software)",
   "version": "4.0.3",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "dependencies": {
     "jszip": "^3.2.2",
     "sha1": "^1.1.1",
@@ -42,7 +42,6 @@
     "url": "git+https://github.com/ewnd9/anki-apkg-export.git"
   },
   "scripts": {
-    "build": "babel -d dist src",
     "build:watch": "babel -w -d dist src",
     "lint": "eslint 'src/**/*.js' 'test/**/*.js'",
     "postpublish": "rm -rf dist",
