--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "anki-apkg-export",
+  "name": "@steve2955/anki-apkg-export",
   "description": "Generate decks for Anki (spaced repetition software)",
-  "version": "4.0.3",
+  "version": "5.0.0",
   "main": "src/index.js",
   "dependencies": {
     "jszip": "^3.2.2",
@@ -12,14 +12,15 @@
   "keywords": [
     "anki",
     "spaced repetition software",
-    "webpack"
+    "webpack",
+    "md2apkg",
+    "apkg"
   ],
   "license": "MIT",
 	"type":"module",
-  "preferGlobal": "true",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ewnd9/anki-apkg-export.git"
+    "url": "git+https://github.com/Steve2955/anki-apkg-export.git"
   },
   "scripts": {
     "build:watch": "babel -w -d dist src",
